objects/APXTCFQ__Conga_Email_Template__c.object
<CustomObject>
    <description>Email template for use with Conga Quote Generation.</description>
    <fields>
        <fullName>APXTCFQ__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APXTCFQ__HTMLBody__c</fullName>
        <label>HTML Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>APXTCFQ__Is_Body_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When enabled, Conga Composer stores the body of the HTML template as an attachment, rather than in the Rich Text field.</inlineHelpText>
        <label>Use attachment for template body</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APXTCFQ__Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Key</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APXTCFQ__Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTCFQ__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTCFQ__Template_Group__c</fullName>
        <label>Template Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTCFQ__TextBody__c</fullName>
        <label>Text Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Conga Quote Email Template</label>
    <nameField>
        <displayFormat>CQE-{00000}</displayFormat>
        <label>Conga Quote Email Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Quote Email Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>